--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/styles-modal-contact.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -80,10 +81,34 @@
         <button type="button" class="store-button" data-modal-open>
           Order flowers
         </button>
-      </div></store
-    >
+      </div>
+    </store>
     <delivery></delivery>
     <blog></blog>
     <footer></footer>
+    <div class="modal-contact">
+      <button type="button" class="close-button">
+        <svg width="18" height="18" class="icon-x">
+          <use href="./images/symbol-defs.svg#icon-Vector"></use>
+        </svg>
+      </button>
+      <div>
+        <h4 class="title-contact">Contact us</h4>
+        <p class="legend"> If you have any additional questions or you want to clarify something before
+        you make an order please fill in your contact details. We will call you back.</p>
+        <form>
+          <div class="form">
+            <label class="label" for="user-name">Name</label>
+              <input class="input" type="text" id="user-name" name="user-name" placeholder="Your name" required>
+          </div>
+          <div class="form">
+            <label class="label" for="email">Email</label>
+              <input class="input" type="email" id="email" name="email" placeholder="Your email" required>
+          </div>
+          <button class="button-send" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
-</html>
+  </html>
+  
